--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,90 @@
-.App {
-  text-align: center;
+/* custom style  */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style-type: none;
+  outline: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background-color: beige;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+nav {
+  background-color: rgb(235, 155, 155);
+  height: 5vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
 }
 
-.App-header {
-  background-color: #282c34;
+.nav-link {
+  color: black;
+  margin: 0 1rem 0 0;
+  transition: all 0.3s;
+}
+
+.nav-link:hover {
+  color: red;
+}
+
+main {
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: flex-start;
+}
+
+h2 {
+  text-align: center;
+  margin: 3rem;
+}
+h1 {
+  text-align: center;
+  margin: 3rem;
+}
+
+table {
+  margin: 3rem;
+  border-collapse: collapse;
+}
+
+td,
+th {
+  border: 1px solid;
+  padding: 1rem;
+}
+
+button {
+  width: 5rem;
+  margin: 0.5rem;
+  padding: 0.2rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: black;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.form-field {
+  margin: 1rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input {
+  width: 20rem;
+  padding: 0.2rem;
+}
+
+footer {
+  background-color: antiquewhite;
+  height: 5vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
 }
